--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -118,8 +118,8 @@ a.navbar-item.is-active:not(:focus):not(:hover) {
     border-radius: 10px;
     padding: 15px 0;
     background: #f7f8fb;
-    border: 1px solid rgba(0, 0, 0, .15);
-    box-shadow: 0 0 16px 2px rgba(0, 0, 0, .05), 0 10px 10px 2px rgba(0, 0, 0, .05);
+    border: 1px solid rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 16px 2px rgba(0, 0, 0, 0.05), 0 10px 10px 2px rgba(0, 0, 0, 0.05);
     font-size: 12px;
     line-height: 40px;
     border-top: 1px solid #e4e4e4;
@@ -147,7 +147,7 @@ a.navbar-item.is-active:not(:focus):not(:hover) {
     line-height: 1.5;
     font-size: 0.7rem;
     padding-right: 16px;
-    border-right: 1px solid rgba(0, 0, 0, .1);
+    border-right: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .cookie-message button.delete {
