--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -35,6 +35,7 @@ a.navbar-item.is-active:not(:focus):not(:hover) {
 }
 
 .navbar-item>ion-icon,
+.navbar-link>ion-icon,
 .support-block ion-icon {
     margin-right: 4px;
 }
