Handlebars: split code to partials

--- a/web/views/screener.hbs
+++ b/web/views/screener.hbs
@@ -1,3 +1,11 @@
-<h2>
-	Screener
-</h2>
+<section class="section" id="main-section">
+	<div class="container is-max-widescreen">
+		<div class="columns">
+			<div class="column is-full">
+				<h2 class="title">
+					Screener
+				</h2>
+			</div>
+		</div>
+	</div>
+</section>
