--- a/web/views/layouts/tightshorts-ui.hbs
+++ b/web/views/layouts/tightshorts-ui.hbs
@@ -2,186 +2,14 @@
 <html lang="en">
 
 <head>
-    <!-- Meta -->
-    <meta charset="UTF-8">
-    <meta name="description" content="US stocks short volume, short volume ratio, short exempt volume.">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="csrf-token" content="{{ csrf }}">
     <meta name="ticker" content="{{ ticker }}">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tight Shorts | Daily Short Sale Volume</title>
-    <meta name="yandex-verification" content="1cab4cdc34b37061" />
-    <!-- Yandex.Metrika counter -->
-    <script type="text/javascript">
-        (function (d, w, c) {
-            (w[c] = w[c] || []).push(function () {
-                try {
-                    w.yaCounter78914581 = new Ya.Metrika({
-                        id: 78914581,
-                        clickmap: true,
-                        trackLinks: true,
-                        accurateTrackBounce: true
-                    });
-                } catch (e) {}
-            });
-
-            var n = d.getElementsByTagName("script")[0],
-                s = d.createElement("script"),
-                f = function () {
-                    n.parentNode.insertBefore(s, n);
-                };
-            s.type = "text/javascript";
-            s.async = true;
-            s.src = "https://mc.yandex.ru/metrika/watch.js";
-
-            if (w.opera == "[object Opera]") {
-                d.addEventListener("DOMContentLoaded", f, false);
-            } else {
-                f();
-            }
-        })(document, window, "yandex_metrika_callbacks");
-    </script>
-    <noscript>
-        <div><img src="https://mc.yandex.ru/watch/78914581" style="position:absolute; left:-9999px;" alt="" /></div>
-    </noscript>
-    <!-- /Yandex.Metrika counter -->
-    <!-- Favicon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-    <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#26a69a">
-    <link rel="shortcut icon" href="/img/favicon/favicon.ico">
-    <meta name="theme-color" content="#ffffff">
-    <!-- Styles -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
-    <link rel="stylesheet" href="/css/styles.css">
-    <!-- Fonts -->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.1/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule="" src="https://unpkg.com/ionicons@5.5.1/dist/ionicons/ionicons.js"></script>
+    {{>head}}
 </head>
 
 <body>
-    <!-- Navbar -->
-    <nav class="navbar container is-max-widescreen" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="/">
-                <img src="/img/logo_header.png" width="154" height="48" alt="Tight Shorts logo">
-            </a>
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar">
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-                <span aria-hidden="true"></span>
-            </a>
-        </div>
 
-        <div id="navbar" class="navbar-menu">
-            <div class="navbar-start">
-                <a class="navbar-item is-active" href="/">
-                    <ion-icon name="home-outline"></ion-icon> Home
-                </a>
-                <a class="navbar-item" href="/screener">
-                    <ion-icon name="options-outline"></ion-icon> Screener
-                </a>
-                <a class="navbar-item" href="https://short-fork.herokuapp.com/" id="menu_shortfork">
-                    <ion-icon name="open-outline"></ion-icon>Short Fork
-                </a>
-                <a class="navbar-item modal-button is-hidden-desktop" data-target="help-modal">
-                    <ion-icon name="information-circle-outline"></ion-icon> What is it all about?
-                </a>
-                <a class="navbar-item modal-button is-hidden-desktop" href="https://t.me/tightshorts_bot"
-                    target="_blank">
-                    <ion-icon name="flash-outline"></ion-icon> Telegram bot
-                </a>
-                <div class="navbar-item has-dropdown is-hoverable">
-                    <a class="navbar-link">
-                        <ion-icon name="link-outline"></ion-icon> Contacts
-                    </a>
-
-                    <div class="navbar-dropdown">
-                        <a class="navbar-item" href="https://t.me/samgozman" target="_blank" rel="nofollow"
-                            rel="noreferrer" rel="noopener">
-                            <ion-icon name="send-outline"></ion-icon> Telegram
-                        </a>
-                        <a class="navbar-item" href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/"
-                            target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
-                            <ion-icon name="pulse-outline"></ion-icon> Tinkoff Pulse
-                        </a>
-                        <a class="navbar-item" href="#support">
-                            <ion-icon name="cash-outline"></ion-icon> Support Project
-                        </a>
-                        <hr class="navbar-divider">
-                        <a class="navbar-item" href="https://github.com/samgozman/tightshorts/issues" target="_blank"
-                            rel="nofollow" rel="noreferrer" rel="noopener">
-                            <ion-icon name="bug-outline"></ion-icon> Report an issue
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-        </div>
-        <div class="navbar-end">
-            <div class="navbar-item">
-                <a class="button is-light is-hidden-touch" id="tgbot" href="https://t.me/tightshorts_bot"
-                    target="_blank" title="Telegram Bot">
-                    <ion-icon name="flash-outline" style="color: #0088cc"></ion-icon>
-                </a>
-            </div>
-            <div class="navbar-item">
-                <button class="button is-light is-hidden-touch" id="change-grid" title="Change grid">
-                    <ion-icon name="grid-outline"></ion-icon>
-                </button>
-            </div>
-            <div class="navbar-item">
-                <button class="button is-light modal-button is-hidden-touch" data-target="help-modal" title="About">
-                    <ion-icon name="information-circle-outline"></ion-icon>
-                </button>
-                <!-- Modal ? message -->
-                <div class="modal" id="help-modal">
-                    <div class="modal-background"></div>
-                    <div class="modal-card">
-                        <header class="modal-card-head">
-                            <p class="modal-card-title">What is it all about?</p>
-                            <button class="delete" aria-label="close"></button>
-                        </header>
-                        <section class="modal-card-body content">
-                            <p>Short volume is the number of shares that have been borrowed to open short positions
-                                (when you sell one or more shares of a stock that you don’t own).</p>
-                            <p>TightShorts.ru aggregates data from FINRA and presents it in an easy-to-use way.</p>
-                            <h4>Terminology</h4>
-                            <ol>
-                                <li> <strong>Volume (Vol)</strong> - number of shares of all
-                                    executed trades during regular trading hours</li>
-                                <li> <strong>Short Volume (SV)</strong> - number of shares that have been borrowed to
-                                    open
-                                    short positions</li>
-                                <li> <strong>Short Exempt Volume (SEV)</strong> - number of shares of all executed
-                                    short sale exempt trades during regular
-                                    trading hours</li>
-                                <li> <strong>Short Volume Ratio (SV,%)</strong> - percentage of short positions from the
-                                    total
-                                    volume. <em>Formula: SV / Vol * 100</em></li>
-                                <li> <strong>Short Exempt Volume Ratio (SEV,%)</strong> - percentage of short short sale
-                                    exempt
-                                    trades from the total volume. <em>Formula: SEV / Vol * 100</em></li>
-                            </ol>
-                            <p><strong>Disclaimer:</strong> The data on the TightShorts is limited to the combined
-                                trading
-                                volume on the NASDAQ, NYSE and OTC,
-                                which was reported to the <a href="http://regsho.finra.org/regsho-Index.html"
-                                    target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">FINRA</a> trade
-                                reporting facility.
-                                We make no guarantees as to the
-                                accuracy of the data. The information is provided for reference only and does not
-                                represent individual
-                                investment advice. </p>
-                        </section>
-                    </div>
-                </div>
-                <!-- Modal ? message: ends -->
-            </div>
-        </div>
-    </nav>
-    <!-- Navbar: ends -->
+    {{>navbar}}
 
     <!-- Error message -->
     <div class="modal" id="error-modal">
@@ -202,70 +30,12 @@
 
 	{{{body}}}
 
-    <!-- Footer -->
-    <footer class="footer">
-        <div class="content has-text-centered">
-            <p>
-                FINRA short sale volume parser
-            </p>
-            <p>
-                <strong>TightShorts.ru</strong> by <a href="https://github.com/samgozman" target="_blank" rel="nofollow"
-                    rel="noreferrer" rel="noopener">samgozman</a>. <br>
-                Tinkoff Pulse: <a href="https://www.tinkoff.ru/invest/social/profile/aqua_disco/" target="_blank"
-                    rel="nofollow" rel="noreferrer" rel="noopener">aqua_disco</a>.
-            </p>
-            <p id="support">
-                Support TightShorts <ion-icon name="cash-outline"></ion-icon>
-            </p>
-            <p class="support-block">
-                <a href="https://paypal.me/samgozman" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
-                    <button class="button is-link is-outlined">
-                        <ion-icon name="logo-paypal"></ion-icon> PayPal
-                    </button>
-                </a>
-                <a href="https://www.tinkoff.ru/rm/gozman.semen1/Ol0PS3882" target="_blank" rel="nofollow"
-                    rel="noreferrer" rel="noopener">
-                    <button class="button is-dark is-outlined">
-                        <ion-icon name="card-outline"></ion-icon> Tinkoff
-                    </button>
-                </a>
-                <br>
-                <br>
-                <a href="https://accounts.binance.com/ru/register?ref=61635677" target="_blank" rel="nofollow">
-                    Binance
-                </a> BTC (ERC20):
-                <br>
-                <img src="/img/btc_qr.png" alt="Bitcoin wallet" class="qrcode">
-            </p>
-        </div>
-    </footer>
+    {{>footer}}
 
-    <!-- Footer: ends -->
+    {{>cookie}}
 
-    <!-- Octocat -->
-    <a href="https://github.com/samgozman/tightshorts" target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">
-        <svg class="octocat" viewBox="0 0 250 250">
-            <path transform="rotate(90 125 125)" d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-            <path transform="rotate(90 125 125)" class="octocat-arm"
-                d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2">
-            </path>
-            <path transform="rotate(90 125 125)" class="octocat-body"
-                d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z">
-            </path>
-        </svg>
-    </a>
-    <!-- Octocat: ends -->
-
-    <!-- Cookie message -->
-    <div class="cookie-message hide" id="cookie-message">
-        <img src="/img/cookie.png">
-        <span>We use cookies for server authentication to get access for stocks data and to improve your browsing
-            experience on our website.</span>
-        <button id="cookie-close" class="delete" aria-label="close"></button>
-    </div>
-    <!-- Cookie message: ends -->
+    <script src="/js/basics.js"></script>
     <script src="/js/main.js"></script>
-    
 </body>
 
 </html>
