--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -3,13 +3,7 @@
         <div class="container is-max-widescreen">
             <div class="columns">
                 <div class="column is-half is-full-mobile">
-                    <h1 class="title is-3"> Tight Shorts <sup class="is-size-7">
-                            <a href="https://github.com/samgozman/tightshorts/releases" target="_blank" rel="nofollow"
-                                rel="noreferrer" rel="noopener">
-                                {{ version }}
-                            </a>
-                        </sup>
-                    </h1>
+                    {{> title }}
                     <p class="subtitle"> Daily short sale volume </p>
                     <!-- Form -->
                     <form class="field has-addons" id="search">
