--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -13,10 +13,10 @@
 
 	<div id="navbar" class="navbar-menu">
 		<div class="navbar-start">
-			<a class="navbar-item is-active" href="/">
+			<a class="navbar-item {{#if isMain}}is-active{{/if}}" href="/">
 				<ion-icon name="home-outline"></ion-icon> Home
 			</a>
-			<a class="navbar-item" href="/screener">
+			<a class="navbar-item {{#if isScreener}}is-active{{/if}}" href="/screener">
 				<ion-icon name="options-outline"></ion-icon> Screener
 			</a>
 			<a class="navbar-item" href="https://short-fork.herokuapp.com/" id="menu_shortfork">
@@ -63,11 +63,13 @@
 				<ion-icon name="flash-outline" style="color: #0088cc"></ion-icon>
 			</a>
 		</div>
+		{{#if isMain}}
 		<div class="navbar-item">
 			<button class="button is-light is-hidden-touch" id="change-grid" title="Change grid">
 				<ion-icon name="grid-outline"></ion-icon>
 			</button>
 		</div>
+		{{/if}}
 		<div class="navbar-item">
 			<button class="button is-light modal-button is-hidden-touch" data-target="help-modal" title="About">
 				<ion-icon name="information-circle-outline"></ion-icon>
