--- a/web/views/screener.hbs
+++ b/web/views/screener.hbs
@@ -6,11 +6,11 @@
 			</div>
 		</div>
 		<div class="columns">
-			<div class="column is-four-fifths">
+			<div class="column is-three-quarters">
 				{{>screener_table}}
 			</div>
-			<div class="column is-one-fifth">
-				<p><ion-icon name="filter-outline"></ion-icon> Filters</p>
+			<div class="column is-one-quarter">
+				{{>screener_panel}}
 			</div>
 		</div>
 	</div>
