--- a/web/views/partials/screener_table.hbs
+++ b/web/views/partials/screener_table.hbs
@@ -22,59 +22,5 @@
 			<th><abbr title="20 days Short Exempt Voume Average, %">SEV20,%</abbr></th>
 		</tr>
 	</thead>
-	<tbody>
-		
-		<tr>
-			<td>AAPL</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-		</tr>
-
-		<tr>
-			<td>AAPL</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-		</tr>
-
-		<tr>
-			<td>AAPL</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-		</tr>
-
-		<tr>
-			<td>AAPL</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-			<td>10000</td>
-			<td>5000</td>
-		</tr>
-
-	</tbody>
+	<tbody id="screenerBody"></tbody>
 </table>
