Pagination next/prev buttons

--- a/web/views/partials/screener_pagination.hbs
+++ b/web/views/partials/screener_pagination.hbs
@@ -1,6 +1,14 @@
 <nav class="pagination is-right" role="navigation" aria-label="pagination">
-	<div id="controlButtons">
-	</div>
+	<a class="button pagination-previous" id="prevButton">
+		<span class="icon">
+			<ion-icon name="chevron-back-outline" size="large"></ion-icon>
+		</span>
+	</a>
+	<a class="button pagination-next" id="nextButton">
+		<span class="icon">
+			<ion-icon name="chevron-forward-outline" size="large"></ion-icon>
+		</span>
+	</a>
 	<ul class="pagination-list" id="paginationList">
 	</ul>
 </nav>
