--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -47,7 +47,7 @@
                 </div>
                 <div class="column mixline is-half is-full-mobile">
                     <!-- Table -->
-                    <div class="table-container">
+                    <div class="table-container volume-csv">
                         <table class="table table-data is-hoverable is-fullwidth">
                             <thead>
                                 <tr>
