--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -14,7 +14,7 @@
 	<div id="navbar" class="navbar-menu">
 		<div class="navbar-start">
 			<a class="navbar-item {{#if isMain}}is-active{{/if}}" href="/">
-				<ion-icon name="home-outline"></ion-icon> Home
+				<ion-icon name="bar-chart-outline"></ion-icon> Charts
 			</a>
 			<a class="navbar-item {{#if isScreener}}is-active{{/if}}" href="/screener">
 				<ion-icon name="options-outline"></ion-icon> Screener
