--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -76,45 +76,7 @@
 			</button>
 			<!-- Modal ? message -->
 			<div class="modal" id="help-modal">
-				<div class="modal-background"></div>
-				<div class="modal-card">
-					<header class="modal-card-head">
-						<p class="modal-card-title">What is it all about?</p>
-						<button class="delete" aria-label="close"></button>
-					</header>
-					<section class="modal-card-body content">
-						<p>Short volume is the number of shares that have been borrowed to open short positions
-							(when you sell one or more shares of a stock that you don’t own).</p>
-						<p>TightShorts.ru aggregates data from FINRA and presents it in an easy-to-use way.</p>
-						<h4>Terminology</h4>
-						<ol>
-							<li> <strong>Volume (Vol)</strong> - number of shares of all
-								executed trades during regular trading hours</li>
-							<li> <strong>Short Volume (SV)</strong> - number of shares that have been borrowed to
-								open
-								short positions</li>
-							<li> <strong>Short Exempt Volume (SEV)</strong> - number of shares of all executed
-								short sale exempt trades during regular
-								trading hours</li>
-							<li> <strong>Short Volume Ratio (SV,%)</strong> - percentage of short positions from the
-								total
-								volume. <em>Formula: SV / Vol * 100</em></li>
-							<li> <strong>Short Exempt Volume Ratio (SEV,%)</strong> - percentage of short short sale
-								exempt
-								trades from the total volume. <em>Formula: SEV / Vol * 100</em></li>
-						</ol>
-						<p><strong>Disclaimer:</strong> The data on the TightShorts is limited to the combined
-							trading
-							volume on the NASDAQ, NYSE and OTC,
-							which was reported to the <a href="http://regsho.finra.org/regsho-Index.html"
-								target="_blank" rel="nofollow" rel="noreferrer" rel="noopener">FINRA</a> trade
-							reporting facility.
-							We make no guarantees as to the
-							accuracy of the data. The information is provided for reference only and does not
-							represent individual
-							investment advice. </p>
-					</section>
-				</div>
+				{{>help}}
 			</div>
 			<!-- Modal ? message: ends -->
 		</div>
