--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -2,7 +2,7 @@
 <nav class="navbar container is-max-widescreen" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
 		<a class="navbar-item" href="/">
-			<img src="/img/logo_header.png" width="154" height="48" alt="Tight Shorts logo">
+			<img src="/img/logo_header.png" width="210" alt="Tight Shorts logo">
 		</a>
 		<a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbar">
 			<span aria-hidden="true"></span>
