--- a/web/views/index.hbs
+++ b/web/views/index.hbs
@@ -1,6 +1,6 @@
     <!-- Main section -->
     <section class="section" id="main-section">
-        <div class="container is-max-widescreen">
+        <div class="container is-widescreen">
             <div class="columns">
                 <div class="column is-half is-full-mobile">
                     {{> title }}
