--- a/web/views/partials/navbar.hbs
+++ b/web/views/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <!-- Navbar -->
-<nav class="navbar container is-max-widescreen" role="navigation" aria-label="main navigation">
+<nav class="navbar container is-widescreen" role="navigation" aria-label="main navigation">
 	<div class="navbar-brand">
 		<a class="navbar-item" href="/">
 			<img src="/img/logo_header.png" width="210" alt="Tight Shorts logo">
