--- a/web/views/screener.hbs
+++ b/web/views/screener.hbs
@@ -1,5 +1,5 @@
 <section class="section" id="main-section">
-	<div class="container is-max-widescreen">
+	<div class="container is-widescreen">
 		<div class="columns">
 			<div class="column is-full">
 				{{> title }}
